[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/reearth/reearth-terrain"

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release profile tuned for WASM size.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
