[package]
name = "terrain-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust numeric core for Re:Earth Terrain. Compiled to WebAssembly via wasm-pack."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
image = { version = "0.25", default-features = false, features = ["webp", "png"] }
# Pure-Rust deflate via miniz_oxide; works under wasm32-unknown-unknown.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde = { workspace = true }
serde_json = { workspace = true }
martini-rs = "0.1"
quantized-mesh = "0.1"

[package.metadata.wasm-pack.profile.release]
# We invoke a system wasm-opt from scripts/build-wasm.mjs instead, because
# the wasm-opt bundled with wasm-pack lags behind rustc and rejects newer
# WebAssembly features.
wasm-opt = false
